# dict-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.yml  main.rs
