[package]
name = "dict-rs"
version = "0.1.0"
authors = ["Li Feng <fengli@smartx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.3", features = ["yaml"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
select = "*"
scraper = "*"
prettytable-rs = "*"